--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ TankBiathlon/__history/
 *.~dsk
 *.local
 *.identcache
+JtpStudio/__history/JTPStudio.pas.~1~
+JtpStudio/__history/JTPStudio.pas.~2~
+JtpStudio/__history/JTPStudio.pas.~3~
+JtpStudio/__history/JTPStudio.pas.~4~
+JtpStudio/__history/JTPStudio.pas.~5~
+JtpStudio/__history/Vector.pas.~1~
+JtpStudio/__history/Vector.pas.~2~
+*.~1~
+*.dsk
+JTPProjects.dsk
