--- a/TankBiathlon/TankBiathlon.dproj
+++ b/TankBiathlon/TankBiathlon.dproj
@@ -111,6 +111,7 @@
         <DCCReference Include="Vehicle.pas"/>
         <DCCReference Include="..\JtpStudio\Vector.pas"/>
         <DCCReference Include="GpsConnection.pas"/>
+        <DCCReference Include="Titers.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
