--- a/TankBiathlon/TankBiathlon.dproj
+++ b/TankBiathlon/TankBiathlon.dproj
@@ -138,6 +138,7 @@
         </DCCReference>
         <DCCReference Include="uGPSPacketsQueue.pas"/>
         <DCCReference Include="uGPSServerConnect.pas"/>
+        <DCCReference Include="uGPSData.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
