--- a/TankBiathlon/TankBiathlon.dproj
+++ b/TankBiathlon/TankBiathlon.dproj
@@ -139,6 +139,12 @@
         <DCCReference Include="uGPSPacketsQueue.pas"/>
         <DCCReference Include="uGPSServerConnect.pas"/>
         <DCCReference Include="uGPSData.pas"/>
+        <DCCReference Include="fCaptionSettings.pas">
+            <Form>frmCaptionSettings</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="uCaptionSettings.pas"/>
+        <DCCReference Include="uCaptionSettingsKeys.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
